syntax = "proto3";

option go_package = "github.com/topten1222/hello_sekai";

message FindItemsInIdsReq {
    repeated string ids = 1;
}

message FindItemsInIdsRes {
    repeated Item items = 1;
}

message Item {
    string id = 1;
    string title = 2;
    double price = 3;
    string imageUrl = 4;
    int32 damage = 5;
}

service ItemGrpcService {
    rpc FindItemsInIds(FindItemsInIdsReq) returns (FindItemsInIdsRes);
}